feat: 新增专注时间逻辑
